@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microsoft.identity.common">
+    >
 
     <uses-sdk
         android:minSdkVersion="26"
