@@ -10,6 +10,7 @@ org.gradle.daemon=true
 
 # See https://stackoverflow.com/questions/56075455/expiring-daemon-because-jvm-heap-space-is-exhausted
 # we must make sure that the total size is <7G, as that's the RAM size of VM on the build pipeline.
+#org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError
 
 # This the TSL versionName...
@@ -20,3 +21,7 @@ abiSelection=x86_64
 
 # Until we want to give it teeth
 org.gradle.dependency.verification=off
+
+
+kotlin.code.style=official
+kotlin.jvm.target=11
