@@ -17,7 +17,7 @@ android {
             coreLibraryDesugaringEnabled true
             // Sets Java compatibility to Java 8
             sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility = JavaVersion.VERSION_1_8
         }
         dependencies {
             coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$rootProject.ext.coreLibraryDesugaringVersion"
@@ -25,15 +25,14 @@ android {
         animationsDisabled = true
     }
     //Commenting out until the next major version of common/msal/etc...
-    /*
     compileOptions {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
         // Sets Java compatibility to Java 8
         sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
-    */
+
    
 
     compileSdkVersion rootProject.ext.compileSdkVersion
