@@ -16,6 +16,8 @@ V.NEXT
 V.14.0.1
 ----------
 - [PATCH] Reverting token removal logic (#2117)
+- [MINOR] Updated target and compile sdk versions to 34 (#2125)
+
 
 V.14.0.0
 ----------
